// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-guDLRT dSWJiq"
>
  <span
    className="sc-jTQDnj dhbzrs"
  >
    0
  </span>
  <div
    className="sc-dmyDGi ZixER"
  >
    <span
      className="sc-beySbM bGJJsX"
      color="#fff"
    />
    <p
      className="sc-eDLJxc hmNxCF"
      color="#555"
    >
      P2
    </p>
  </div>
</div>
`;

exports[`playerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-guDLRT dSWJiq"
>
  <div
    className="sc-dmyDGi ZixER"
  >
    <span
      className="sc-beySbM ejsooN"
      color="#000"
    />
    <p
      className="sc-eDLJxc cTKOlq"
      color="#fff"
    >
      P1
    </p>
  </div>
  <span
    className="sc-jTQDnj dhbzrs"
  >
    0
  </span>
</div>
`;
